color of logo is changed

--- a/magi.css
+++ b/magi.css
@@ -12,7 +12,7 @@ nav{
   line-height: 20px;
 }
 .logo{
-  color: white;
+  color: red;
   font-size: 35px;
   text-transform: uppercase;
   line-height: 50px;
