--- a/magi.css
+++ b/magi.css
@@ -6,13 +6,13 @@
   list-style: none;
 }
 nav{
-  background: purple;
+  background: rgb(214, 194, 214);
   height:78px ;
   width: 100%;
   line-height: 20px;
 }
 .logo{
-  color: red;
+  color: rgb(99, 79, 79);
   font-size: 40px;
   text-transform: uppercase;
   line-height: 50px;
